fix z-index

--- a/builder.css
+++ b/builder.css
@@ -161,6 +161,7 @@
 
 .house-base {
 	position: absolute;
+	z-index: -1;
 	user-select: none;
 }
 
